--- a/src/style.css
+++ b/src/style.css
@@ -4,42 +4,42 @@
 
 --color-primary-400: hsl(228, 39%, 23%);
 
---color-neutral-100: hsl(232, 12%, 13%) ;
---color-neutral-900: hsl:(0 0% 0%);
+--color-neutral-900: hsl(232, 12%, 13%) ;
+--color-neutral-100: hsl:(0 0% 100%);
 
---font-family-primary: 'Be Vietnam Pro', sans-serif;
+--ff-primary: 'Be Vietnam Pro', sans-serif;
 
---font-family-body: var(var(--font-family-primary));
---font-family-heading: var(var(--font-family-primary));
+--ff-body: var(var(--ff-primary));
+--ff-heading: var(var(--ff-primary));
 
---font-weight-regular: 400;
---font-weight-semi-bold: 500;
---font-weight-bold: 700;
+--fw-regular: 400;
+--fw-semi-bold: 500;
+--fw-bold: 700;
 
---font-size-300: .8125rem;
---font-size-400: .875rem;
---font-size-500: .9375rem;
---font-size-600: 1rem;
---font-size-700: 1.875rem;
---font-size-800: 2.5rem;
---font-size-900: 3.5rem;
+--fs-300: .8125rem;
+--fs-400: .875rem;
+--fs-500: .9375rem;
+--fs-600: 1rem;
+--fs-700: 1.875rem;
+--fs-800: 2.5rem;
+--fs-900: 3.5rem;
 
 
 
---font-size-body: var(--font-size-400);
---font-size-primary-heading: var(--font-size-800);
---font-size-secondary-heading: var(--font-size-700);
---font-size-nav: var(--font-size-500);
---font-size-button: var(--font-size-300);
+--fs-body: var(--fs-400);
+--fs-primary-heading: var(--fs-800);
+--fs-secondary-heading: var(--fs-700);
+--fs-nav: var(--fs-500);
+--fs-button: var(--fs-300);
 }
 
 @media (min-width: 50em) {
   :root {
     
-    --font-size-body: var(--font-size-500);
-    --font-size-primary-heading: var(--font-size-900);
-    --font-size-secondary-heading: var(--font-size-800);
-    --font-size-nav: var(--font-size-300);
+    --fs-body: var(--fs-500);
+    --fs-primary-heading: var(--fs-900);
+    --fs-secondary-heading: var(--fs-800);
+    --fs-nav: var(--fs-300);
     
   }
 }
@@ -142,17 +142,17 @@ background-color: var(--color-neutral-100);
 .bg-neutral-900 {
 background-color: var(--color-neutral-900);
 }
-.font-weight-bold {font-weight: var(--font-weight-bold);}
-.font-weight-semi-bold { font-weight: var(--font-weight-semi-bold); }
-.font-weight-regular { font-weight: var(--font-weight-regular); }
+.fw-bold {font-weight: var(--fw-bold);}
+.fw-semi-bold { font-weight: var(--fw-semi-bold); }
+.fw-regular { font-weight: var(--fw-regular); }
 
-.font-weight-primary-heading {
+.fw-primary-heading {
   font-size: var(--font-size-primary-heading);
 }
-.font-weight-secondary-heading {
+.fw-secondary-heading {
   font-size: var(--font-size-secondary-heading);
 }
-.font-size-300 {  font-size: var(--font-size-300); }
-.font-size-400 {  font-size: var(--font-size-400); }
-.font-size-500 {  font-size: var(--font-size-500); }
-.font-size-600 {  font-size: var(--font-size-600); }
+.fs-300 {  font-size: var(--fs-300); }
+.fs-400 {  font-size: var(--fs-400); }
+.fs-500 {  font-size: var(--fs-500); }
+.fs-600 {  font-size: var(--fs-600); }
