--- a/src/style.css
+++ b/src/style.css
@@ -6,10 +6,10 @@
 
 --clr-primary-400: hsl(228, 39%, 23%);
 
---clr-neutral-900: hsl(232, 12%, 13%) ;
---clr-neutral-100: hsl:(0 0% 100%);
+--clr-neutral-900: hsl(232, 12%, 13%);
+--clr-neutral-100: hsl(0, 0%, 98%);
 
---ff-primary: 'Be Vietnam Pro', sans-serif;
+--ff-primary: 'Be Vietnam Pro', sans-serif; font-family: 'Inter', sans-serif;
 
 --ff-body: var(var(--ff-primary));
 --ff-heading: var(var(--ff-primary));
@@ -18,9 +18,9 @@
 --fw-semi-bold: 500;
 --fw-bold: 700;
 
---fs-300: .8125rem;
---fs-400: .875rem;
---fs-500: .9375rem;
+--fs-300: 0.8125rem;
+--fs-400: 0.875rem;
+--fs-500: 0.9375rem;
 --fs-600: 1rem;
 --fs-700: 1.875rem;
 --fs-800: 2.5rem;
@@ -34,9 +34,9 @@
 --fs-nav: var(--fs-500);
 --fs-button: var(--fs-300);
 
---size-100: .25rem;
---size-200: .5rem;
---size-300: .75rem;
+--size-100: 0.25rem;
+--size-200: 0.5rem;
+--size-300: 0.75rem;
 --size-400: 1rem;
 --size-500: 1.5rem;
 --size-600: 2rem;
@@ -70,7 +70,7 @@
 * {
   margin: 0;
   padding: 0;
-  font: inherit;
+  /* font: inherit; */
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
@@ -123,7 +123,166 @@ picture, svg {
   }
 }
 
+/* at 9:20-ish - Kevin Powell "Build a responsive websites with HTML & CSS|Part three: General Styling */
+.container {
+  --max-width: 1110px;
+  --padding: 1rem;
+
+  width: min(var(--max-width), 100% - (var(--padding)*2));
+  margin-inline: auto;
+}
+
+.even-columns {
+  display: grid;
+  gap: 1rem;
+}
+
+@media (min-width: 50em) {
+.even-columns {
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+}
+}
+
+/* General styling */
+body {
+  font-size: var( --fs-body);
+  font-family: var(--ff-body);
+  color: var(--clr-primary-400);
+}
+/* button */
+
+.button {
+  display: inline-flex;
+  cursor: pointer;
+  text-decoration: none;
+  border: 0;
+  border-radius: 100vmax;
+  padding: 1em 2.5em;
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-button);
+  line-height: 1;
+  color: var(--clr-neutral-100);
+  background-color: var(--clr-accent-400);
+  box-shadow: 0 .75em 1em -1em var(--clr-accent-500);
+}
+
+.button[data-type="inverted"] {
+  background-color: var(--clr-neutral-100);
+  color: var(--clr-accent-400);
+}
+
+.button:hover,
+button:focus-visible {
+background-color: var(--clr-accent-300);
+}
+
+.button[data-type="inverted"]:hover 
+.button[data-type="inverted"]:focus-visible{
+  background-color: var(--clr-neutral-100);
+  color: var(--clr-accent-300);
+}
+
+/* navigation */
+.primary-header {
+  padding-top: var(--size-700);
+}
+
+.nav-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mobile-nav-toggle {
+  display: none;
+}
+
+.nav-list {
+  font-size: var(--fs-nav);
+}
+
+.nav-list {
+  display: flex;
+  gap: clamp(var(--size-400), 5vw, var(--size-700));
+  font-weight: var(--fw-semi-bold);
+}
+
+.nav-list a {
+  text-decoration: none;
+  color: var(--clr-primary-400);
+}
+
+.nav-list a:hover
+.nav-list a:focus {
+  color: var(--clr-accent-400);
+}
+
+@media (max-width: 50em) {
+  .primary-navigation {
+    display: none;
+
+    position: absolute;
+    padding: var (--size-700);
+    inset: 7rem var(--size-400) auto;
+    max-width: 35rem;
+    margin-left: auto;
+    background: var(--clr-neutral-100);
+    border-radius: var(--size-100);
+    box-shadow: 0 0 .75em rgb(0, 0, 0, 0.05);
+  }
+
+  .primary-header[data-overlay]::before {
+    content: "";
+    position: fixed;
+    inset: 0;
+    /* height: 100vh; */
+    background-image: linear-gradient(rgb (0 0 0 /0), rgb( 0 0 0 / 0.8));
+  }
+
+.nav-list {
+    display: grid;
+    gap: var(--size-600);
+    text-align: center;
+    font-weight: var(--fw-bold);
+}
+
+
+  .primary-navigation[data-visible] {
+    display: block;
+  }
+
+  .mobile-nav-toggle {
+    display: block;
+    position:fixed;
+    top: var(--size-600);
+    right: var(--size-400);
+    z-index: 100;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    padding: 0.5em;
+    }
+    
+    .icon-closed
+    .mobile-nav-toggle {
+      display: none;
+    }    
+}
+
 /* Utility classes */
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap; /* added line */
+  border: 0;
+}
 
 .text-primary-400 {
   color: var(--clr-primary-400)
@@ -155,9 +314,15 @@ background-color: var(--clr-neutral-100);
 .bg-neutral-900 {
 background-color: var(--clr-neutral-900);
 }
-.fw-bold {font-weight: var(--fw-bold);}
-.fw-semi-bold { font-weight: var(--fw-semi-bold); }
-.fw-regular { font-weight: var(--fw-regular); }
+.fw-bold {
+  font-weight: var(--fw-bold);
+}
+.fw-semi-bold {
+  font-weight: var(--fw-semi-bold);
+}
+.fw-regular {
+  font-weight: var(--fw-regular);
+}
 
 .fw-primary-heading {
   font-size: var(--fs-primary-heading);
@@ -167,10 +332,18 @@ background-color: var(--clr-neutral-900);
   font-size: var(--fs-secondary-heading);
   line-height: 1.1;
 }
-.fs-300 {  font-size: var(--fs-300); }
-.fs-400 {  font-size: var(--fs-400); }
-.fs-500 {  font-size: var(--fs-500); }
-.fs-600 {  font-size: var(--fs-600); }
+.fs-300 { 
+  font-size: var(--fs-300); 
+}
+.fs-400 {
+  font-size: var(--fs-400); 
+}
+.fs-500 {
+  font-size: var(--fs-500);
+}
+.fs-600 {
+  font-size: var(--fs-600);
+}
 
 .padding-block-900 {
   padding-block: var(--size-900);
@@ -180,53 +353,13 @@ background-color: var(--clr-neutral-900);
   padding-block: var(--size-700);
 }
 
-/* at 9:20-ish - Kevin Powell "Build a responsive websites with HTML & CSS|Part three: General Styling */
-.container {
-  --max-width: 1110px;
-  --padding: 1rem;
-
-  width: min(var(--max-width), 100% - (var(--padding)*2));
-  margin-inline: auto;
-}
-
-.even-columns {
-  display: grid;
-  gap: 1rem;
+.display-sm-none {
+  display: none;
 }
 
 @media (min-width: 50em) {
-.even-columns {
-  grid-auto-flow: column;
-  grid-auto-columns: 1fr;
-}
-}
+  .display-md-inline-flex {
+    display: inline-flex;
+  }
 
-/* General styling */
-body {
-  font-size: var( --fs-body);
-  font-family: var(--ff-body);
-  color: var(--clr-primary-400);
-}
-
-.button {
-  cursor: pointer;
-  text-decoration: none;
-  border: 0;
-  border-radius: 100vmax;
-  padding: 1em 2.5em;
-  font-weight: var(--fw-bold);
-  font-size: var(--fs-button);
-  color: var(--clr-neutral-100);
-  background-color: var(--clr-accent-400);
-  box-shadow: 0 .75em 1em -1em var(--clr-accent-500);
-}
-
-.button[data-type="inverted"] {
-  background-color: var(--clr-neutral-100);
-  color: var(--clr-accent-400);
-}
-
-.button:hover,
-button:focus-visible {
-background-color: var(--clr-accent-300);
 }
