--- a/src/style.css
+++ b/src/style.css
@@ -23,13 +23,13 @@
 --fs-500: 0.9375rem;
 --fs-600: 1rem;
 --fs-700: 1.875rem;
---fs-800: 2.5rem;
---fs-900: 3.5rem;
+--fs-800: 3rem;
+--fs-900: 4.5rem;
 
 
 
 --fs-body: var(--fs-400);
---fs-primary-heading: var(--fs-800);
+--fs-primary-heading: var(--fs-900);
 --fs-secondary-heading: var(--fs-700);
 --fs-nav: var(--fs-500);
 --fs-button: var(--fs-300);
@@ -257,7 +257,19 @@ background-color: var(--clr-accent-300);
    {
       display: none;
     }    
+/* footer navigation */
+.footer {
+  columns: 2;
+}
 
+.footer-nav a {
+  color: var(--clr-neutral-100);
+  text-decoration: none;
+}
+
+.footer-nav a:is(:hover, :focus){
+  color: var(--clr-accent-400)
+}
     /* cta */
     .cta { 
       position: relative;
@@ -276,9 +288,9 @@ background-color: var(--clr-accent-300);
       position: absolute;
       z-index: -1;
       inset: 0;
-      background-image: url("images/bg-tablet-pattern.svg"), 
+      /* background-image: url("images/bg-tablet-pattern.svg"), 
       url("images/bg-tablet-pattern.svg");
-      background-position: -10rem -2rem, 20rem -32rem;
+      background-position: -10rem -2rem, 20rem -32rem; */
       background-repeat: no-repeat;
       opacity: 0.2;
     }
