--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,8 @@
 --clr-primary-400: hsl(228, 39%, 23%);
 
 --clr-neutral-900: hsl(232, 12%, 13%);
---clr-neutral-100: hsl(0, 0%, 98%);
+--clr-neutral-200: hsl(0, 0%, 98%);
+--clr-neutral-100: hsl(0, 0%, 99%);
 
 --ff-primary: 'Be Vietnam Pro', sans-serif;
 
@@ -303,7 +304,6 @@ background-color: var(--clr-accent-300);
   
 @media (min-width: 50em) {
   .primary-footer-wrapper {
-    display: grid;
     grid-template-areas: "logo-social nav form";
   }
   .primary-footer-social-logo {
@@ -321,7 +321,7 @@ background-color: var(--clr-accent-300);
 
 /* footer navigation */
 .footer-nav {
-  /* outline: 3px solid blue; */
+  outline: 3px solid blue;
   columns: 2;
   gap: clamp(var(--size-200), 10vw, var(--size-900))
 }
@@ -352,7 +352,7 @@ background-color: var(--clr-accent-300);
 
   @media (min-width: 50em) {
     .social-list {
-      display: flex;
+      /* display: flex; */
       gap: var(--size-300);
     }
     .social-icon {
@@ -455,6 +455,91 @@ margin-inline: auto;
     box-shadow: 5em 0 0 var(--bg);
     background-color: var(--bg);
   }
+}
+/* slider */
+.slider {
+  display: flex;
+  gap: var(--size-400);
+  list-style: none;
+  scroll-padding-inline: 1.2rem;
+}
+
+.a11y-slider-container {
+margin-block: var(--size-700);
+margin-inline: var(--size-400);
+}
+
+.slider > * {
+  position: relative;
+  padding: var(--size-600) var(--size-600) var(--size-600);
+  flex: 0 0 auto;
+  width: 100%;
+  
+}
+
+@media (min-width: 30em) {
+  .slider {
+    scroll-padding-inline: 1.5rem;
+  }
+  .a11y-slider-container {
+    margin-inline: 0;
+    }
+  .slider > * {
+    width: 50%;
+  }
+}
+@media (min-width: 50em) {
+  .slider > * {
+    width: 34%;
+  }
+}
+
+.slider-content {
+  border-radius: var(--size-100);
+  background:var(--clr-neutral-200);
+  padding: 1rem;
+  /* background: var(--clr-neutral-200) ; */
+  
+}
+
+.slider img {
+  width: var(--size-800);
+  position: relative;
+  inset: 0;
+  top: -10%;
+  margin-inline: auto;
+  /* transform: translate; */
+
+}
+
+.a11y-slider-dots {
+  display: flex;
+  justify-content: center;
+  margin-block: var(--size-500);
+  gap: var(--size-300);
+
+}
+
+.a11y-slider-dots li {
+  display: block;
+  width: 12px;
+  height: 12px;
+  padding:0;
+  /* margin: 0 6px; */
+  /* border:  */
+}
+.a11y-slider-dots li button {
+  display: block;
+  font-size: 0;
+  text-indent: -9999px;
+  background: transparent;
+  border: 1px solid var(--clr-accent-400) !important;
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+}
+.a11y-slider-dots li button.active {
+  background:var(--clr-accent-400);
 }
 
 /* ----------------------------------------------------------------- */
