--- a/src/style.css
+++ b/src/style.css
@@ -378,9 +378,9 @@ background-color: var(--clr-accent-300);
       position: absolute;
       z-index: -1;
       inset: 0;
-      /* background-image: url("images/bg-tablet-pattern.svg"), 
+      background-image: url("images/bg-tablet-pattern.svg"), 
       url("images/bg-tablet-pattern.svg");
-      background-position: -10rem -2rem, 20rem -32rem; */
+      background-position: -10rem -2rem, 20rem -32rem;
       background-repeat: no-repeat;
       opacity: 0.2;
     }
@@ -543,6 +543,26 @@ margin-inline: var(--size-400);
 }
 
 /* ----------------------------------------------------------------- */
+
+/* pill-shaped-image */
+.pill-shaped-image {
+  position: relative;
+}
+
+.pill-shaped-image::before{
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  top: 0;
+  width: 450px;
+  aspect-ratio: 1/1.3;
+  background-image: url("images/bg-tablet-patter.svg");
+  background-position: bottom right;
+  border: 1px solid red;
+}
+
+
 /* Utility classes */
 
 .visually-hidden {
