--- a/src/style.css
+++ b/src/style.css
@@ -84,6 +84,7 @@ html:focus-within {
 html,
 body {
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 /* Set core body defaults */
@@ -257,11 +258,18 @@ background-color: var(--clr-accent-300);
     background: transparent;
     border: 0;
     padding: 0.5em;
+    width: 1.65rem;
+    aspect-ratio: 1;
+
+    background-image: url('images/icon-hamburger.svg');
+    background-size: contain;
+    background-repeat: no-repeat; 
+    background-position: center;
     }
     
-    .mobile-nav-toggle .icon-close {
-      display: none;
-    }  
+    .mobile-nav-toggle[aria-expanded="true"] {
+      background-image: url('images/icon-close.svg');
+    }
   }
     /* footer */
 
@@ -326,7 +334,7 @@ background-color: var(--clr-accent-300);
 
 /* footer navigation */
 .footer-nav {
-  outline: 3px solid blue;
+  /* outline: 3px solid blue; */
   columns: 2;
   gap: clamp(var(--size-200), 10vw, var(--size-900))
 }
@@ -563,19 +571,15 @@ margin-inline: var(--size-400);
 }
 
 .pill-shaped-image::before{
-  content: '';
+  content: url("images/bg-tablet-pattern.svg");
   position: absolute;
+  transform: scale(80%);
   z-index: -1;
-  right: 0;
-  top: 0;
+  right: 10%;
+  top: -15%;
   width: 87%;
-  max-height: 70vh;
-  max-height: 70dvh;
-  aspect-ratio: 1/1.3;
-  background-image: url("images/bg-tablet-pattern.svg");
-  background-repeat: no-repeat;
-  background-position: bottom left;
-  border: 1px solid red;
+  
+  /* border: 1px solid red; */
 }
 
 @media (min-width: 47em) {
@@ -584,7 +588,31 @@ margin-inline: var(--size-400);
   }
 }
 
+/* sales points */
+.sales-points__pill {
+  position: relative;
+}
 
+.sales-points__pill::before {
+  content: url("images/bg-tablet-pattern.svg");
+  transform: scale(60%);
+  position: absolute;
+  z-index: -1;
+  left: 70%;
+  bottom: 10%;
+  width: 100px;
+}
+
+@media (min-width: 47em){
+  .sales-points__pill::before {
+    transform: scale(70%);
+    position: absolute;
+    z-index: -1;
+    left: -70%;
+    top: 45%;
+    width: 100px;
+  }
+}
 
 /* Utility classes */
 
